# server/api/documents/post.py
@@ -1,14 +1,12 @@
 from db.neo4j import get_next_doc_id, create_document_anchor
-from db.mysql import execute_no_result_set
+from db.mysql import execute_no_result_set_permission
 
 
 def post(document_data):
-    args = list(document_data.values())
-    args.append("abc123")   # NB: Hardcoded user ID for now
-    args.append(0)  # Placeholder for the procedure's out parameter
-    print(args)
-    error = execute_no_result_set("create_document", args)
-    print(args)
+    args = (document_data["name"], document_data["description"], document_data["project_id"],
+            document_data["visibility_id"], "abc123", 0)    # NB: Hardcoded user ID for now
+    permission = execute_no_result_set_permission("create_document", args)
+    print(permission)
     return 200
 
     next_id = get_next_doc_id()
@@ -16,6 +14,6 @@ def post(document_data):
     create_document_anchor(next_id, document_data.name, document_data.description)
 
     if not error:
-        return 201
+        return 'Document created', 201
     else:
-        return 400
+        return 'Bad request. Document data invalid.', 400
